Add conditional for format and type

--- a/conditional-fields-format-type/index.html
+++ b/conditional-fields-format-type/index.html
@@ -130,65 +130,102 @@
          "title": "Person",
          "oneOf": [
              {
-                 "$ref": "#/definitions/heroCard",
-                 "title": "heroCard"
+                 "$ref": "#/definitions/basicperson",
+                 "title": "Basic Person"
              },
              {
-                 "$ref": "#/definitions/bigCard",
-                 "title": "bigCard"
-             },
-             {
-                 "$ref": "#/definitions/verticalList",
-                 "title": "verticalList"
-             },
-             {
-                 "$ref": "#/definitions/verticalHorizontalList",
-                 "title": "verticalHorizontalList"
-             },
-             {
-                 "$ref": "#/definitions/actionList",
-                 "title": "actionList"
-             },
-             {
-                 "$ref": "#/definitions/highlightedList",
-                 "title": "highlightedList"
-             },
-             {
-                 "$ref": "#/definitions/collectionList",
-                 "title": "collectionList"
+                 "$ref": "#/definitions/person",
+                 "title": "Complex Person"
              }
          ],
          "definitions": {
-             "heroCard": {
+             "basicperson": {
                  "title": "Person",
                  "type": "object",
-                 "id": "heroCardSelect",
+                 "id": "person",
                  "properties": {
-                     "heroCardSelect": {
+                     "name": {
+                         "type": "string",
+                         "description": "First and Last name",
+                         "minLength": 4,
+                         "propertyOrder": 10
+                     },
+                     "age": {
+                         "type": "integer",
+                         "default": 21,
+                         "minimum": 18,
+                         "maximum": 99,
+                         "propertyOrder": 20
+                     },
+                     "gender": {
                          "type": "string",
                          "enum": [
-                             "contentArticle",
-                             "contentAudio",
-                             "contentVideo",
-                             "benefit",
-                             "action",
-                             "collection"
+                             "male",
+                             "female"
                          ],
                          "propertyOrder": 30
+                     },
+                     "favorite_color": {
+                         "type": "string",
+                         "format": "color",
+                         "title": "favorite color",
+                         "default": "#19CD91",
+                         "propertyOrder": 40
                      }
                  }
              },
-             "bigCard": {
-                 "$ref": "#/definitions/bigCard",
+             "person": {
+                 "$ref": "#/definitions/basicperson",
                  "properties": {
-                     "heroCardSelect": {
-                         "type": "string",
-                         "enum": [
-                             "contentArticle",
-                             "contentAudio",
-                             "contentVideo"
-                         ],
-                         "propertyOrder": 30
+                     "location": {
+                         "type": "object",
+                         "title": "Location",
+                         "properties": {
+                             "city": {
+                                 "type": "string"
+                             },
+                             "state": {
+                                 "type": "string"
+                             },
+                             "citystate": {
+                                 "type": "string",
+                                 "description": "This is generated automatically from the previous two fields",
+                                 "template": "{{city}}, {{state}}",
+                                 "watch": {
+                                     "city": "location.city",
+                                     "state": "location.state"
+                                 }
+                             }
+                         }
+                     },
+                     "pets": {
+                         "type": "array",
+                         "format": "table",
+                         "title": "Pets",
+                         "uniqueItems": true,
+                         "items": {
+                             "type": "object",
+                             "properties": {
+                                 "type": {
+                                     "type": "string",
+                                     "enum": [
+                                         "cat",
+                                         "dog",
+                                         "bird",
+                                         "reptile",
+                                         "other"
+                                     ],
+                                     "default": "dog"
+                                 },
+                                 "name": {
+                                     "type": "string"
+                                 },
+                                 "fixed": {
+                                     "type": "boolean",
+                                     "title": "spayed / neutered"
+                                 }
+                             }
+                         }
                      }
                  }
              }
